# StockfishService

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: stockfish-lib.cpp
app/src/main/java/de/cisha/stockfishservice/: StockfishService.java
app/src/main/res/values/: strings.xml
stockfishservice/: CMakeLists.txt  build.gradle
stockfishservice/src/androidTest/java/de/cisha/stockfishservice/: ExampleInstrumentedTest.java
stockfishservice/src/main/: AndroidManifest.xml
stockfishservice/src/main/cpp/: stockfish-lib.cpp
stockfishservice/src/main/java/de/cisha/stockfishservice/: StockfishService.java
stockfishservice/src/test/java/de/cisha/stockfishservice/: ExampleUnitTest.java
